--- a/css/leon.css
+++ b/css/leon.css
@@ -7,7 +7,10 @@
     --secondary-color:hsl(200, 32%, 25%);
     --section-padding:60px;
     --secation-background: #f6f6f6;
-    --main-duration:0.5s;
+    --main-duration:0.7s;
+    --content-margin: 100px;
+    
+    
 }
 *{
     -webkit-box-sizing: border-box;
@@ -17,6 +20,9 @@
 }
 html{
     scroll-behavior: smooth;
+     line-height: 1.15;
+    -webkit-text-size-adjust: 100%;
+    
 }
 body{
     font-family: 'Work Sans', sans-serif;
@@ -71,6 +77,12 @@ body{
 .header {
     padding: 20px;
 }
+.container {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .header .container {
     display: flex;
     justify-content: space-between;
@@ -95,7 +107,7 @@ body{
    margin-bottom: 5px;
 }
 .header .links:hover .icon span{
-    background-color: rgb(236, 132, 63);
+    background-color: var(--main-colore);
 
 }
 .header .links:hover .icon span:nth-child(2){
@@ -126,6 +138,8 @@ width: 100%;
     min-width: 200px;
     display: none;
     z-index: 1;
+     height: 190px;
+    -webkit-transition: var(--main-duration);   
 }
 .header .links:hover ul{
     display: block;
@@ -141,7 +155,7 @@ width: 100%;
     padding-left: 25px;
 }
 .header .links ul li:not(:last-child) a {
-    border-bottom: 1px solid #dfc7c7;
+    border-bottom: 1px solid var(--main-colore);
 }
 .header .links ul::before{
     content: "";
@@ -167,8 +181,8 @@ width: 100%;
 .landing .intro-class {
     position: absolute;
     left: 50%;
-    top: 50%;
-    transform: translate(-50%,-50%);
+    top: 25%;
+    transform: translate(-50%,-25%);
     text-align: center;
     width: 320px;
     max-width: 100%;
@@ -229,10 +243,11 @@ width: 100%;
     grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
     grid-gap:30px;
     /* margin-top: 100px; */
-    padding: 100px;
+     margin-top: var(--content-margin);
+    text-align: center;
 }
 .Services .Services-content .srv{
-    display: flex;
+/*     display: flex; */
     margin-bottom: 40px;
 
 }
@@ -240,11 +255,14 @@ width: 100%;
     .Services .Services-content srv{
         flex-direction: column;
         text-align: center;
+         display: flex;
+        
     }
 }
 .Services .Services-content .srv i{
     color: var(--main-colore);
     flex-basis: 60px;
+   
 
 }
 .Services .Services-content .srv .text{
@@ -296,7 +314,7 @@ width: 100%;
     grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
     grid-gap:30px;
     margin-top: 80px;
-    margin-right: 30px;
+    margin-right: 50px;
 
   }
 .potfolio .potofolio-content .card{
